k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: recommendation
spec:
  selector:
    app: recommendation
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
