k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: recommendation-ingress
spec:
  rules:
    - host: recommendation.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: recommendation
                port:
                  number: 80
